# aceto

./: .gitignore  .gitmodules  README.md  aceto.py  balsamico.py  editor.py  pyproject.toml
acetolang/: __init__.py  __main__.py
examples/: accusum.act  conditions.act  gridtest.act  input.act  manual_mult.act  oddeven.act  sumup.act  test.act
